fixed submenu font wrap

--- a/src/Components/NavbarMenus/style.css
+++ b/src/Components/NavbarMenus/style.css
@@ -14,10 +14,10 @@
 @media screen and (min-width: 1025px) and (max-width: 1281px) {
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 1920px) and (max-height: 1080px) {
   .subMenu_1 {
     position: absolute;
-    top: 11.5% !important;
+    top: 15% !important;
     z-index: 10;
     height: 500px;
   }
